# solar-tracker

./: .coverage  .editorconfig  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/skills/: README.md  code-review.yaml  create-pull-request.yaml  generate-documentation.yaml
.github/workflows/: ci.yml  opencode.yml  python-quality.tpl.yml  upgrade-github-actions.yml  upgrade-python-dependencies.yml
notebooks/: panel_visualization.ipynb  sun_visualization.ipynb
notebooks/.ipynb_checkpoints/: sun_visualization-checkpoint.ipynb
src/solar_tracking/: __init__.py  main.py  solar_panel.py
tests/: test_main.py  test_solar_panel.py
